--- a/site/public/index.html
+++ b/site/public/index.html
@@ -45,7 +45,7 @@
                 <h1>Seu melhor amigo!</h1>
             </div>
             <p>Desvende o mundo destes pequenos felinos e conheça a comovente história por trás desse projeto.</p>
-            <a class="botao-padrao btn-bunner " href="#">Saiba mais!</a>
+            <a class="botao-padrao btn-bunner " href="./nossa-historia.html">Saiba mais!</a>
         </div>
     </div>
 
@@ -211,15 +211,15 @@
             <div class="navegacao-footer">
                 <ul>
                     <li><a href="index.html">Home<a></li>
-                    <li><a href="#">Nossa História</a></li>
+                    <li><a href="./nossa-historia.html">Nossa História</a></li>
                 </ul>
 
                 <p>Todos os direitos reservados | ©2022</p>
             </div>
 
             <div class="redes-footer">
-                <img src="./assets/linkedin.png" alt="icone linkedin">
-                <img src="./assets/instagram.png" alt="icone instagram">
+                <a href="#"><img src="./assets/linkedin.png" alt="icone linkedin"></a> 
+                <a href="#"><img src="./assets/instagram.png" alt="icone instagram"></a> 
             </div>
         </div>
     </footer>
