--- a/site/public/login.html
+++ b/site/public/login.html
@@ -55,11 +55,16 @@
                         <label for="ipt-email">Email</label>
                         <input type="text" id="ipt_email" placeholder="seuemail@dominio.com">
                     </div>
+                    <!-- span de verificação -->
+                    <span id="span_email_invalido"> </span>
 
                     <div class="campo">
                         <label for="ipt-senha">Senha</label>
                         <input type="password" id="ipt_senha" placeholder="******">
                     </div>
+                    <!-- span de verificação -->
+                    <span id="span_email_invalido"> </span>
+                
 
                     <a>Ainda não possui uma conta?</a>
                     <b><a href="./cadastro.html">Cadastre-se!</a></b>
