--- a/site/public/nossa-historia.html
+++ b/site/public/nossa-historia.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="./css/nossa-historia.css">
   <link rel="stylesheet" type="text/css" href="./css/style-geral.css">
-  <link rel="icon" type="img/png" href="./assets/icon/favicon.png">
+  <link rel="icon" type="img/png" href="./assets/favicon.png">
   <title>Nossa História | Pick.Me Cat</title>
 </head>
 
@@ -16,7 +16,7 @@
   <!-- header -->
   <header class="header">
     <div class="container">
-      <img src="./assets/imgs/logo.png" alt="Pick.Me Cat Logo" id="logo">
+      <img src="./assets/logo.png" alt="Pick.Me Cat Logo" id="logo">
 
       <nav class="navegacao">
         <ul>
@@ -33,7 +33,7 @@
   <main>
   <div class="section-sobre-nos">
     <div class="chico">
-      <img src="./assets/imgs/chiquinho.jfif">
+      <img src="./assets/chiquinho.jfif">
       <h1>Uma data, uma garota e um gato!</h1>
       <p>
         Nossa história começa no dia 16 de Junho de 2022, nesse mesmo dia completava 1 ano desde o falecimento
@@ -64,7 +64,7 @@
     </div>
 
     <div class="sobre-mim">
-      <img src="./assets/imgs/foto-perfil.jfif">
+      <img src="./assets/foto-perfil.jfif">
       <h1>Sobre mim</h1>
       <p>
         Oi, eu sou a Isa! sou a dono do gatinho acima e responsável pela criação desse projeto. Então, por que não
@@ -98,50 +98,50 @@
   </header>
     <div class="gallery-container">
     
-        <a href="./assets/imgs/img-gelery-01.jfif" class="gallery-items">
-            <img src="./assets/imgs/img-gelery-01.jfif" alt="Chick Hicks">
+        <a href="./assets/img-gelery-01.jfif" class="gallery-items">
+            <img src="./assets/img-gelery-01.jfif">
         </a>
-        <a href="./assets/imgs/img-gelery-02.jfif" class="gallery-items">
-            <img src="./assets/imgs/img-gelery-02.jfif" alt="Doctor Hudson">
+        <a href="./assets/img-gelery-02.jfif" class="gallery-items">
+            <img src="./assets/img-gelery-02.jfif">
         </a>
-        <a href="./assets/imgs/img-gelery-03.jfif" class="gallery-items">
-            <img src="./assets/imgs/img-gelery-03.jfif" alt="Fillmore">
+        <a href="./assets/img-gelery-03.jfif" class="gallery-items">
+            <img src="./assets/img-gelery-03.jfif">
         </a>
-        <a href="./assets/imgs/img-gelery-04.jfif" class="gallery-items">
-            <img src="./assets/imgs/img-gelery-04.jfif" alt="Flo">
+        <a href="./assets/img-gelery-04.jfif" class="gallery-items">
+            <img src="./assets/img-gelery-04.jfif">
         </a>
-        <a href="./assets/imgs/img-gelery-05.jfif" class="gallery-items">
-            <img src="./assets/imgs/img-gelery-05.jfif" alt="Guido">
+        <a href="./assets/img-gelery-05.jfif" class="gallery-items">
+            <img src="./assets/img-gelery-05.jfif">
         </a>
-        <a href="./assets/imgs/img-galery-06.jfif" class="gallery-items">
-            <img src="./assets/imgs/img-galery-06.jfif" alt="lightning-mcqueen">
+        <a href="./assets/img-galery-06.jfif" class="gallery-items">
+            <img src="./assets/img-galery-06.jfif">
         </a>
-        <a href="./assets/imgs/img-galery-07.jfif" class="gallery-items">
-            <img src="./assets/imgs/img-galery-07.jfif" alt="Lizzie">
+        <a href="./assets/img-galery-07.jfif" class="gallery-items">
+            <img src="./assets/img-galery-07.jfif">
         </a>
-        <a href="./assets/imgs/img-galery-08.jfif" class="gallery-items">
-            <img src="./assets/imgs/img-galery-08.jfif" alt="Luigi">
+        <a href="./assets/img-galery-08.jfif" class="gallery-items">
+            <img src="./assets/img-galery-08.jfif">
         </a>
-        <a href="./assets/imgs/img-galery-09.jfif" class="gallery-items">
-            <img src="./assets/imgs/img-galery-09.jfif" alt="Mack">
+        <a href="./assets/img-galery-09.jfif" class="gallery-items">
+            <img src="./assets/img-galery-09.jfif">
         </a>
-        <a href="./assets/imgs/img-galery-10.jfif" class="gallery-items">
-            <img src="./assets/imgs/img-galery-10.jfif" alt="Ramone">
+        <a href="./assets/img-galery-10.jfif" class="gallery-items">
+            <img src="./assets/img-galery-10.jfif">
         </a>
-        <a href="./assets/imgs/img-galery-11.jfif" class="gallery-items">
-            <img src="./assets/imgs/img-galery-11.jfif" alt="Ruivo">
+        <a href="./assets/img-galery-11.jfif" class="gallery-items">
+            <img src="./assets/img-galery-11.jfif">
         </a>
-        <a href="./assets/imgs/img-galery-12.jfif" class="gallery-items">
-            <img src="./assets/imgs/img-galery-12.jfif" alt="Sally">
+        <a href="./assets/img-galery-12.jfif" class="gallery-items">
+            <img src="./assets/img-galery-12.jfif">
         </a>
-        <a href="./assets/imgs/img-galery-13.jfif" class="gallery-items">
-            <img src="./assets/imgs/img-galery-13.jfif" alt="Sheriff">
+        <a href="./assets/img-galery-13.jfif" class="gallery-items">
+            <img src="./assets/img-galery-13.jfif">
         </a>
-        <a href="./assets/imgs/img-galery-14.jfif" class="gallery-items">
-            <img src="./assets/imgs/img-galery-14.jfif" alt="Sven">
+        <a href="./assets/img-galery-14.jfif" class="gallery-items">
+            <img src="./assets/img-galery-14.jfif">
         </a>
-        <a href="./assets/imgs/img-galery-15.jfif" class="gallery-items">
-            <img src="./assets/imgs/img-galery-15.jfif" alt="The King">
+        <a href="./assets/img-galery-15.jfif" class="gallery-items">
+            <img src="./assets/img-galery-15.jfif">
         </a>
      
     </div>        
