alterações finais do front part 1

--- a/site/public/index.html
+++ b/site/public/index.html
@@ -74,23 +74,22 @@
 
 
     <div class="texto-cards">
-        <h1>Título Qualquer</h1>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil, ipsum delectus. Consequuntur deserunt
-            aliquam
-            facere ab vel? Fugit cupiditate, sequi asperiores tempore repellendus et quibusdam dolor fuga? Ipsa, modi a?
+        <h1>Por que gatos?</h1>
+        <p>
+            Você sabe o porquê dos gatos terem sido adorados como verdadeiros deuses no antigo egito ou o porquê
+            de serem tão queridos pela maior parte da população?
         </p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis recusandae provident incidunt ullam
-            nisi
-            eligendi nulla porro dolore quaerat est a, nemo iste vero consequuntur? Ipsam sit autem neque ratione.</p>
+        <p>Este projeto te convida a conhecer mais sobre o universo desses pequenos felinos e te faz refletir 
+            sobre a possibilidade de ter um em suas vidas através da nossa própia história. 
+        </p>
 
     </div>
     <div class="caixa firts">
         <div class="itens-card">
             <img src="./assets/gato.png">
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur, officia dolore minima rerum optio
-                ullam
-                dolorum quibusdam in quo ipsam velit sequi reiciendis, similique quas facere maiores quaerat ut nihil.
+              Gatos são animais <b>inteligentes, intuitivos, curiosos, independentes</b>. Seja qual for a raça, estes
+              animais ter personalidades únicas e marcantes. 
             </p>
         </div>
     </div>
