enviando alterações, dashboard

--- a/site/public/index.html
+++ b/site/public/index.html
@@ -98,9 +98,10 @@
         <div class="itens-card">
             <img src="./assets/gato (1).png">
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur, officia dolore minima rerum optio
-                ullam
-                dolorum quibusdam in quo ipsam velit sequi reiciendis, similique quas facere maiores quaerat ut nihil.
+                Você sabia que ter um animal de estimação <b>reduz consideravelmente </b> seus níveis de pressão arterial ?
+                Os gatos contribuem com muitos benefícios para as pessoas que vivem com eles. Existem estudos que afirmam que eles têm a 
+                capacidade de nos fazer <b> relaxar</b> e de <b>reduzir o estresse</b> Dessa forma, contribuindo para uma melhor qualidade
+                de vida. 
             </p>
         </div>
     </div>
@@ -109,23 +110,16 @@
         <div class="itens-card">
             <img src="./assets/gato (2).png">
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur, officia dolore minima rerum optio
-                ullam
-                dolorum quibusdam in quo ipsam velit sequi reiciendis, similique quas facere maiores quaerat ut nihil.
+                Na espiritualidade os gatos são vistos como seres mais evoluídos e ótimos amuletos para afastar más energias. Todos
+                os fatos citados comprovam que o universo dos felinos dométiscos é rico em curiosidades, cultura, história e misticismos.
+                Além de fatos científicos comprovando todos os benefícios de ter um animal de estimação. <b>Cadestre novos gatinhos no nosso sistema!</b>
             </p>
         </div>
     </div>
 
-    <a class="botao-padrao btn-cards " href="#">Saiba mais!</a>
+    <!-- <a class="botao-padrao btn-cards " href="#">Saiba mais!</a> -->
 
-    <!-- terceira imagem do site 
-    <div class="container-bunner-third">
-        <video autoplay muted loop>
-            <source src="./assets/coverr-a-beautiful-cat-licks-itself-381-1080p.mp4">
-        </video>
-    </div> -->
-
-
+   
     <!-- cards blog -->
 
 
@@ -136,40 +130,37 @@
     <div class="container-cards-blog">
 
         <div class="cards-blog">
-            <a href="#"> <img src="./assets/gato-blog-01.jpg"></a>
+            <a href="posts-blog/gatos-pensantes.html"> <img src="./assets/gato-inteligente.jpg"></a>
 
-            <h1>Titulo qualquer</h1>
+            <h1>Gatos pensam e sentem como nós</h1>
             <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+               Gatos são mais parecidos conosco do que com cães. Leia mais sobre
+               clicando no link abaixo!
             </p>
-            <a class="botao-padrao" href="#">Saiba mais!</a>
+            <a class="botao-padrao" href="posts-blog/gatos-pensantes.html">Ler!</a>
 
         </div>
 
         <div class="cards-blog">
-            <a href="#"><img src="./assets/gato-blog-2.jpg"></a>
+            <a href="../public/posts-blog/gatos-brancos.html"><img src="./assets/gato-blog-2.jpg"></a>
 
-            <h1>Titulo qualquer</h1>
+            <h1>Gatos brancos podem ser surdos?</h1>
             <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Você sabia que gatos brancos de olhos azuis tem mais propensão
+                a terem surdez? Clique no link abaixo e leia mais sobre.
             </p>
-            <a class="botao-padrao" href="#">Saiba mais!</a>
+            <a class="botao-padrao" href="../public/posts-blog/gatos-brancos.html">Ler!</a>
         </div>
 
         <div class="cards-blog">
-            <a href="#"> <img src="./assets/gato-blog-3.jpeg"></a>
+            <a href="../public/posts-blog/gatos-pretos.html"> <img src="./assets/gato-blog-3.jpeg"></a>
 
-            <h1>Titulo qualquer</h1>
+            <h1>Gatinhos de sorte! boa imunidade</h1>
             <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                A coloração escura dos gatos pretos são responsáveis
+                 por tornar esses bichinhos imunes ao vírus de HIV felina.
             </p>
-            <a class="botao-padrao" href="#">Saiba mais!</a>
+            <a class="botao-padrao" href="../public/posts-blog/gatos-pretos.html">Ler!</a>
         </div>
     </div>
 
