--- a/site/public/nossa-historia.html
+++ b/site/public/nossa-historia.html
@@ -149,27 +149,28 @@
 
 
 
-  <!-- Rodapé  -->
+   <!-- Rodapé  -->
 
-  <footer>
+   <footer>
     <div class="container">
-      <img src="assets/imgs/logo.png" alt="logo">
+        <img src="assets/logo.png" alt="logo">
 
-      <div class="navegacao-footer">
-        <ul>
-          <li><a href="index.html">Home<a></li>
-          <li><a href="#">Nossa História</a></li>
-        </ul>
+        <div class="navegacao-footer">
+            <ul>
+                <li><a href="index.html">Home<a></li>
+                <li><a href="./nossa-historia.html">Nossa História</a></li>
+            </ul>
 
-        <p>Todos os direitos reservados | ©2022</p>
-      </div>
+            <p>Todos os direitos reservados | ©2022</p>
+        </div>
 
-      <div class="redes-footer">
-        <img src="./assets/imgs/linkedin.png" alt="icone linkedin">
-        <img src="./assets/imgs/instagram.png" alt="icone instagram">
-      </div>
+        <div class="redes-footer">
+            <a href="#"><img src="./assets/linkedin.png" alt="icone linkedin"></a> 
+            <a href="#"><img src="./assets/instagram.png" alt="icone instagram"></a> 
+        </div>
     </div>
-  </footer>
+</footer>
+
 
   </div>
   </div>
